[package]
name = "cygnus"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
actix-web = "4.0"
sea-orm = "1.1"
sea-orm-migration = "1.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
entity = { path = "entity" }
migration = { path = "migration" }